made several changes and tested against the live gitlab - need to mock more

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 		    <artifactId>jersey-apache-client</artifactId>
 		    <version>1.17</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.sun.jersey</groupId>
+		    <artifactId>jersey-json</artifactId>
+		    <version>1.17</version>
+		</dependency>
 
 		<!-- Unit test -->
 		<dependency>
