removed "crowd" references

--- a/pom.xml
+++ b/pom.xml
@@ -115,13 +115,14 @@
 				</dependencies>
 			</plugin>
 			
-			<!-- Have to set source level to at least Java5, we use annotations (Nexus requries 1.6) -->
+			<!-- Have to set source level to at least Java5, we use annotations (Nexus requries 1.6) 
+			-->
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.5.1</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 
