--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,18 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.sonatype.nexus</groupId>
+			<artifactId>nexus-test-common</artifactId>
+			<version>${nexus.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.sonatype.nexus</groupId>
+			<artifactId>nexus-testsuite-support</artifactId>
+			<version>${nexus.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit-dep</artifactId>
 			<version>4.10</version>
@@ -95,6 +107,12 @@
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-core</artifactId>
 			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.mockwebserver</groupId>
+			<artifactId>mockwebserver</artifactId>
+			<version>20130706</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
