--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>biz.neustar.nexus</groupId>
 	<artifactId>nexus-gitlab-token-auth-plugin</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<packaging>nexus-plugin</packaging>
 	<name>Nexus Gitlab Token Authentication</name>
 	<description>Integration between Nexus and Gitlab Token Auth.</description>
