--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+    <parent>
+      <groupId>org.sonatype.nexus.plugins</groupId>
+      <artifactId>nexus-plugins</artifactId>
+      <version>2.8.0-05</version>
+    </parent>
+
 	<groupId>biz.neustar.nexus</groupId>
 	<artifactId>nexus-gitlab-token-auth-plugin</artifactId>
-	<version>0.1.0</version>
+	<version>0.3.0</version>
 	<packaging>nexus-plugin</packaging>
 	<name>Nexus Gitlab Token Authentication</name>
 	<description>Integration between Nexus and Gitlab Token Auth.</description>
@@ -26,7 +32,8 @@
     </developers>
     
 	<properties>
-		<nexus.version>2.3.1</nexus.version>
+		<!-- <nexus.version>2.7.0-06</nexus.version> -->
+		<nexus.version>2.9.1-02</nexus.version>
 		<app-lifecycle.version>1.7</app-lifecycle.version>
 	</properties>
 	
@@ -49,61 +56,89 @@
 		<dependency>
 			<groupId>org.sonatype.nexus</groupId>
 			<artifactId>nexus-plugin-api</artifactId>
-			<version>${nexus.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<!-- This dependency is only needed if you want to include REST Resources 
 		see: GitlabTestPlexusResource
-		-->
+                -->
+		<dependency>
+			<groupId>org.sonatype.nexus.plugins</groupId>
+			<artifactId>nexus-restlet1x-plugin</artifactId>
+			<type>${nexus-plugin.type}</type>
+			<scope>provided</scope>
+		</dependency>
+
+		<!--
 		<dependency>
 			<groupId>org.sonatype.nexus</groupId>
 			<artifactId>nexus-rest-api</artifactId>
 			<version>2.2.1</version>
 			<scope>provided</scope>
 		</dependency>
+		-->
 		<!-- Allowing REST calls -->
-		<dependency>
-		    <groupId>com.sun.jersey</groupId>
-		    <artifactId>jersey-client</artifactId>
-		    <version>1.17</version>
+
+                <dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>1.18.1</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.sun.jersey.contribs</groupId>
-		    <artifactId>jersey-apache-client</artifactId>
-		    <version>1.17</version>
+			<groupId>com.sun.jersey.contribs</groupId>
+			<artifactId>jersey-apache-client</artifactId>
+			<version>1.18.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+
+		<dependency>
+                  <groupId>com.fasterxml.jackson.jaxrs</groupId>
+                  <artifactId>jackson-jaxrs-json-provider</artifactId>
+		  <version>2.3.4</version>
+		</dependency>
+<!--
 		<dependency>
 		    <groupId>com.sun.jersey</groupId>
 		    <artifactId>jersey-json</artifactId>
-		    <version>1.17</version>
+		    <version>1.18.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.sun.xml.bind</groupId>
+					<artifactId>jaxb-impl</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
+-->
 
 		<!-- Unit test -->
 		<dependency>
 			<groupId>org.sonatype.nexus</groupId>
-			<artifactId>nexus-plugin-test-api</artifactId>
-			<version>${nexus.version}</version>
+			<artifactId>nexus-plugin-testsupport</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.sonatype.nexus</groupId>
 			<artifactId>nexus-test-common</artifactId>
-			<version>${nexus.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.sonatype.nexus</groupId>
 			<artifactId>nexus-testsuite-support</artifactId>
-			<version>${nexus.version}</version>
 			<scope>test</scope>
 		</dependency>
+<!--
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit-dep</artifactId>
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
+-->
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
@@ -126,19 +161,12 @@
 	
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>app-lifecycle-maven-plugin</artifactId>
-				<version>${app-lifecycle.version}</version>
-				<extensions>true</extensions>
-				<dependencies>
-					<dependency>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>app-lifecycle-nexus</artifactId>
-						<version>${app-lifecycle.version}</version>
-					</dependency>
-				</dependencies>
+                       <plugin>
+				<groupId>org.sonatype.nexus</groupId>
+				<artifactId>nexus-plugin-bundle-maven-plugin</artifactId>
+                                <extensions>true</extensions>
 			</plugin>
+
 			
 			<!-- Have to set source level to at least Java5, we use annotations (Nexus requries 1.6) 
 			-->
@@ -178,4 +206,52 @@
 			</plugin>
 		</plugins>
 	</build>
+
+  <profiles>
+     <profile>
+      <id>idea</id>
+
+      <properties>
+        <nexus-plugin.type>jar</nexus-plugin.type>
+      </properties>
+    </profile>
+    <profile>
+      <id>it</id>
+      <activation>
+        <property>
+          <name>it</name>
+        </property>
+      </activation>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>sisu-maven-bridge-maven-plugin</artifactId>
+            <version>3.0</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>export</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>integration-test</goal>
+                  <goal>verify</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
